--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@nestjs/core": "^10.0.2",
     "@nestjs/microservices": "^10.1.2",
     "@nestjs/platform-express": "^10.0.2",
+    "@prisma/client": "^5.0.0",
     "axios": "^1.0.0",
     "class-validator": "^0.14.0",
     "reflect-metadata": "^0.1.13",
@@ -36,6 +37,7 @@
     "jest-environment-node": "^29.4.1",
     "nx": "16.5.5",
     "prettier": "^2.6.2",
+    "prisma": "^5.0.0",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.1.3"
