Add login in auth-service whit db seed

--- a/apps/auth-service/.env.example
+++ b/apps/auth-service/.env.example
@@ -1,4 +1,9 @@
-AUTH_SERVICE_HOST= localhost
-AUTH_SERVICE_PORT= 3001
-API_GATEWAY_HOST= localhost
-API_GATEWAY_PORT= 3333
+AUTH_SERVICE_HOST=localhost
+AUTH_SERVICE_PORT=3001
+API_GATEWAY_HOST=localhost
+API_GATEWAY_PORT=3333
+MAIL_SERVICE_NAME=EMAIL
+POSTGRES_HOST=localhost
+POSTGRES_USER=database_user
+POSTGRES_PASSWORD=password_user
+POSTGRES_DB=puppilots
