--- a/package.json
+++ b/package.json
@@ -7,11 +7,18 @@
   "dependencies": {
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
+    "@nestjs/jwt": "^10.1.0",
     "@nestjs/microservices": "^10.1.2",
+    "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^10.0.2",
     "@prisma/client": "^5.0.0",
+    "@types/bcrypt": "^5.0.0",
     "axios": "^1.0.0",
+    "bcrypt": "^5.1.0",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "tslib": "^2.3.0"
@@ -41,5 +48,8 @@
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.1.3"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   }
 }
