prisma service in shared lib

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@puppilots/shared-dtos": ["libs/shared-dtos/src/index.ts"]
+      "@puppilots/shared-dtos": ["libs/shared-dtos/src/index.ts"],
+      "@puppilots/shared-services": ["libs/shared-services/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
