--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@nestjs/microservices": "^10.1.2",
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^10.0.2",
+    "@nestjs/swagger": "^7.1.4",
     "@prisma/client": "^5.0.0",
     "@types/bcrypt": "^5.0.0",
     "axios": "^1.0.0",
