--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,17 @@
 version: "3.9"  # use what version you need
 services:
-  auth-service:
-    build:
-      context: .
-      dockerfile: Dockerfile.authService
-    env_file:
-      - apps/auth-service/.env.production
-    ports:
-      - 3001:3001
-    networks:
-      - backend
-
-  api-gateway:
+  all-microservices:
     image: dadarek/wait-for-dependencies
     build:
       context: .
-      dockerfile: Dockerfile.apiGateway
+      dockerfile: Dockerfile.allMicroServices
     env_file:
-      - apps/api-gateway/.env.production
+      - .env
     ports:
       - 3333:3333
     networks:
       - backend
     depends_on:
-      - auth-service
       - postgres
 
   postgres:
