--- a/docker/dev/docker-compose.yml
+++ b/docker/dev/docker-compose.yml
@@ -1,10 +1,21 @@
 version: "3.9"  # use what version you need
 services:
-  all-microservices:
+  nginx:
+    image: nginx:latest
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+    ports:
+      - 80:80
+    networks:
+      - backend
+    depends_on:
+      - backend
+
+  backend:
     image: dadarek/wait-for-dependencies
     build:
-      context: .
-      dockerfile: Dockerfile.allMicroServices
+      context: ../../
+      dockerfile: docker/Dockerfile.allMicroServices
     env_file:
       - .env
     ports:
