feature: send notification of registration

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@nestjs/axios": "^3.0.0",
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/jwt": "^10.1.0",
@@ -14,7 +15,7 @@
     "@nestjs/swagger": "^7.1.4",
     "@prisma/client": "^5.0.0",
     "@types/bcrypt": "^5.0.0",
-    "axios": "^1.0.0",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
