--- a/.github/workflows/linter-check.yml
+++ b/.github/workflows/linter-check.yml
@@ -25,4 +25,4 @@ jobs:
       run: npm install
 
     - name: Linting
-      run: nx run-many --all --target=lint
+      run: npx nx run-many --all --target=lint
