--- a/.github/workflows/linter-check.yml
+++ b/.github/workflows/linter-check.yml
@@ -7,7 +7,7 @@ on:
     branches: [ "dev" ]
     
 jobs:
-  build:
+  linter-check:
     runs-on: ubuntu-latest
     environment:
       name: DONWEB
